--- a/destinations.html
+++ b/destinations.html
@@ -54,6 +54,34 @@
 </div>
 
 </header>
+	
+<!--スライドショー-->
+<aside id="mainimg">
+
+<div class="slide slide1">
+<div>
+<h2>君だけの地図で、合格へ<span>ともきんぐのオンライン受験サポート</span></h2>
+<p>毎日続けられる勉強法で、<br>確実な合格へ導くマンツーマン指導</p>
+</div>
+<video src="images/1.mp4" autoplay loop muted playsinline></video>
+</div>
+
+<div id="loading-text">loading...</div>
+
+</aside>
+
+<div id="container">
+
+<div id="contents" class="bg1">
+
+<main>
+
+<section>
+
+
+
+
+	
 
 <div id="container">
 
