--- a/destinations.html
+++ b/destinations.html
@@ -299,6 +299,10 @@
 </div>
 <!--/#container-->
 
+<section>
+
+<h2 class="dn">ギャラリー</h2>
+
 <div class="thumbnail-slide">
 <a href="#"><img src="images/feture1.jpg" alt=""></a>
 <a href="#"><img src="images/feture2.jpg" alt=""></a>
@@ -344,7 +348,6 @@
 <small>&copy; <a href="index.html">Tomoking</a> All Rights Reserved.</small>
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
-
 
 <!--ページの上部へ戻るボタン-->
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
