--- a/destinations.html
+++ b/destinations.html
@@ -5,18 +5,14 @@
 <title>ともきんぐの受験指導</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ともきんぐ【君だけの先生】">
-<link rel="stylesheet" href="css/stylefordest.css"> {/* CSSファイル名は style.css または stylefordest.css のどちらが正しいか確認してください */}
+<link rel="stylesheet" href="css/stylefordest.css"> 
 
 </head>
 
-<body> {/* トップページの場合、homeクラスを付与 */}
-
+<body>
 <header>
     <div id="header-top">
         <h1>いつも動画を見てくれてありがとう！</h1>
-        <ul class="lang">
-            {/* 言語切り替えなどが必要であればここに<li>要素を追加 */}
-        </ul>
     </div>
 
     <div class="header-inner">
@@ -61,7 +57,7 @@
 
 <div id="container">
     <div id="contents" class="bg1">
-        <main> {/* mainタグを開始 */}
+        <main>
             <section>
                 <h2 class="dh2">「【絶望】頑張りたいのに、机に向かえない君へ」</h2>
                 <img src="placeholder-pain.jpg" alt="うなだれてたくさんの参考書を前に途方に暮れている受験生" class="dpics">
@@ -240,13 +236,6 @@
                 </div>
             </section>
 
-            {/* 最後のsectionが閉じていないため、ここで閉じるか、内容が続く場合は記述してください。
-                元のHTMLでは、この後にもう一つ<section>（ギャラリー）がありましたが、
-                構造的にこの位置か、あるいは上記の最後の<section>の内容がギャラリーなのか、
-                意図を確認する必要があります。ここでは、一旦上記の<section>で主要なコンテンツは終わり、
-                ギャラリーセクションをその下に追加する形で修正します。
-            */}
-
             <section>
                 <h2 class="dn">ギャラリー</h2>
                 <div class="thumbnail-slide">
@@ -259,9 +248,9 @@
                 </div>
             </section>
 
-        </main> {/* mainタグを閉じる */}
-    </div> {/* /#contents を閉じる */}
-</div> {/* /#container を閉じる */}
+        </main> 
+    </div>
+</div> 
 	
 <div id="footer-contents">
     <div class="left">
@@ -276,13 +265,9 @@
         <p><a href="transraw.html">特定商取引法に基づく表示</a></p>
         <p><a href="menseki.html">免責事項</a></p>
     </div>
-    {/* <div class="right"> ... </div> が必要であればここに追加 */}
+   
 </div>
-{/* フッターメニューが必要であればここに追加
-<div id="footermenu">
-    ...
-</div>
-*/}
+
 <footer>
     <small>© <a href="index.html">Tomoking</a> All Rights Reserved.</small>
     <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
@@ -291,8 +276,7 @@
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
 
 <div id="menubar_hdr">
-    <div class="menu-icon"> {/* 元のHTMLでは class="menu-icon" がなかったので追加しました。CSSと合わせて確認してください。 */}
-        <span></span><span></span><span></span>
+    <div class="menu-icon"> 
     </div>
 </div>
 
