--- a/destinations.html
+++ b/destinations.html
@@ -277,6 +277,10 @@
 
 <div id="menubar_hdr">
     <div class="menu-icon"> 
+	 <span></span>
+        <span></span>
+        <span></span>
+
     </div>
 </div>
 
