--- a/destinations.html
+++ b/destinations.html
@@ -237,7 +237,7 @@
             </section>
 
             <section>
-                <h2 class="dn">ギャラリー</h2>
+                <h2>ギャラリー</h2>
                 <div class="thumbnail-slide">
                     <a href="#"><img src="images/feture1.jpg" alt=""></a>
                     <a href="#"><img src="images/feture2.jpg" alt=""></a>
