--- a/destinations.html
+++ b/destinations.html
@@ -58,6 +58,7 @@
 <div id="container">
     <div id="contents" class="bg1">
         <main>
+		<img src="images/keyv_p1.png" id ="link1">
             <section>
                 <h2 class="dh2">「【絶望】頑張りたいのに、机に向かえない君へ」</h2>
                 <img src="placeholder-pain.jpg" alt="うなだれてたくさんの参考書を前に途方に暮れている受験生" class="dpics">
