--- a/destinations.html
+++ b/destinations.html
@@ -65,7 +65,7 @@
                 <p class="dnp">
                     何度「明日こそは」と決意しても、結局三日坊主…<br>
                     やろうと思っても、何から始めていいか分からず時間だけが過ぎていく…<br>
-                    周りは頑張ってるように見えるのに、自分だけ立ち止まっている気がする…
+                    周りは頑張ってるのに、自分だけ前に進んでいない感じがする…
                 </p>
                 <p class="dnp">
                     受験生なのに、思うように勉強できない。<br>
@@ -79,14 +79,14 @@
                 <h2 class="dh2">でもそれは、<strong>君だけの問題</strong>じゃない。</h2>
                 <img src="placeholder-alone.jpg" alt="鎖に繋がれているようなイメージの学生、または険しい山を一人で登るシルエット" class="dpics">
                 <p class="dnp">
-                    実は、多くの人が「一人で毎日コツコツ続ける」ことに苦労しています。<br>
+                    実は、多くの人が「一人で続ける」ことに苦労しています。<br>
                     人間は他者と関わりながら生きる動物であり、1人でいるよりも誰かと共に努力する方が、より大きな力を発揮しやすいからです。
                 </p>
                 <p class="dnp">
                     一人きりだと誘惑に弱くなり、サボっても誰にもバレない安心感から楽な方に流されてしまうのは、ごく自然なことです。
                 </p>
                 <p class="dnp">
-                    君に必要なのは、根性ややる気ではなく、<strong>「毎日やれる仕組み」</strong>と、**「君を一人にしない伴走者」**。
+                    君に必要なのは、根性ややる気ではなく、<strong>「毎日やれる仕組み」</strong>と、<strong>「君を一人にしない伴走者」</strong>。
                 </p>
             </section>
 
@@ -98,7 +98,7 @@
                     君の「一人で続かない悩み」を根本から解決し、<strong>受験勉強を乗り切るための揺るぎない「勉強習慣」を身につける</strong>ためのプログラムを作成しました。
                 </p>
                 <p class="dnp">
-                    「一人じゃ続かない」君が、無理なく、着実に、<strong>「毎日コツコツ頑張れる自分」に変わる</strong>ための、科学に基づいた**「仕組み」と、君の「伴走者」**がここにいます。
+                    「一人じゃ続かない」君が、無理なく、着実に、<strong>「毎日コツコツ頑張れる自分」に変わる</strong>ための、科学に基づいた<strong>「仕組み」</strong>「仕組み」と、君の<strong>「伴走者」」</strong>がここにいます。
                 </p>
             </section>
 
@@ -131,7 +131,7 @@
                     <strong>もしミッションが達成できなかった時も、決して君を責めません。</strong>
                 </p>
                 <p class="dnp">
-                    「なぜ今日は難しかったのか？」「次回は時間やタイミングを変えてみようか？」「この教材の方が取り組みやすいかも？」など、**君の状況に合わせて、原因を一緒に考え、具体的な改善策をLINEで丁寧にアドバイス**します。
+                    「なぜ今日は難しかったのか？」「次回は時間やタイミングを変えてみようか？」「この教材の方が取り組みやすいかも？」など、<strong>君の状況に合わせて、原因を一緒に考え、具体的な改善策をLINEで丁寧にアドバイス</strong>します。
                 </p>
                 <ul>
                     <li class="dsli">君の「挫折ポイント」を一緒に見つけ、乗り越えるために尽力します。</li>
@@ -150,8 +150,8 @@
                     君はもう、一人で悩んだり、孤独を感じる必要はありません。
                 </p>
                 <p class="dnp">
-                    参加者限定の**オンラインコミュニティ**にご招待します。<br>
-                    同じように「一人じゃ続かない」悩みを抱え、克服しようと頑張る**全国の受験生**が集まっています。
+                    参加者限定の<strong>オンラインコミュニティ</strong>strong>にご招待します。<br>
+                    同じように「一人じゃ続かない」悩みを抱え、克服しようと頑張る<strong>全国の受験生</strong>strong>が集まっています。
                 </p>
                 <ul>
                     <li class="dsli">お互いの進捗を共有し、励まし合えます。</li>
@@ -171,7 +171,7 @@
                     プログラムを終えた後、君の勉強習慣は劇的に変わっています。
                 </p>
                 <p class="dnp">
-                    毎日4時間（またはそれ以上）集中して勉強するのが**「当たり前」**になり、勉強への心理的なハードルが驚くほど下がります。
+                    毎日4時間（またはそれ以上）集中して勉強するのが<strong>「当たり前」</strong>strong>になり、勉強への心理的なハードルが驚くほど下がります。
                 </p>
                 <ul>
                     <li class="dsli">勉強するまでの「めんどくさい」時間が激減。</li>
