--- a/destinations.html
+++ b/destinations.html
@@ -150,8 +150,8 @@
                     君はもう、一人で悩んだり、孤独を感じる必要はありません。
                 </p>
                 <p class="dnp">
-                    参加者限定の<strong>オンラインコミュニティ</strong>strong>にご招待します。<br>
-                    同じように「一人じゃ続かない」悩みを抱え、克服しようと頑張る<strong>全国の受験生</strong>strong>が集まっています。
+                    参加者限定の<strong>オンラインコミュニティ</strong>にご招待します。<br>
+                    同じように「一人じゃ続かない」悩みを抱え、克服しようと頑張る<strong>全国の受験生</strong>が集まっています。
                 </p>
                 <ul>
                     <li class="dsli">お互いの進捗を共有し、励まし合えます。</li>
@@ -171,7 +171,7 @@
                     プログラムを終えた後、君の勉強習慣は劇的に変わっています。
                 </p>
                 <p class="dnp">
-                    毎日4時間（またはそれ以上）集中して勉強するのが<strong>「当たり前」</strong>strong>になり、勉強への心理的なハードルが驚くほど下がります。
+                    毎日4時間（またはそれ以上）集中して勉強するのが<strong>「当たり前」</strong>になり、勉強への心理的なハードルが驚くほど下がります。
                 </p>
                 <ul>
                     <li class="dsli">勉強するまでの「めんどくさい」時間が激減。</li>
