--- a/destinations.html
+++ b/destinations.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="header-inner">
-<!--      ロゴ消してみる<p id="logo"><a href="index.html"><img src="images/logo_home.png" alt="Travel Logo"></a></p> -->
+<p id="logo"><a href="index.html"><img src="images/logo_home.png" alt="Travel Logo"></a></p> 
 
         <div id="menubar">
             <nav>
