--- a/destinations.html
+++ b/destinations.html
@@ -61,7 +61,7 @@
 		<img src="images/keyv_p1.png" id ="link1">
             <section>
                 <h2 class="dh2">頑張りたいのに、勉強が続かない君へ</h2>
-                <img src="placeholder-pain.jpg" alt="うなだれてたくさんの参考書を前に途方に暮れている受験生" class="dpics">
+                <img src="images/tudukanai.jpg" class="dpics">
                 <p class="dnp">
                     何度「明日こそは」と決意しても、結局三日坊主…<br>
                     やろうと思っても、何から始めていいか分からず時間だけが過ぎていく…<br>
@@ -77,7 +77,7 @@
 
             <section>
                 <h2 class="dh2">でもそれは、<strong>君だけの問題</strong>じゃない。</h2>
-                <img src="placeholder-alone.jpg" alt="鎖に繋がれているようなイメージの学生、または険しい山を一人で登るシルエット" class="dpics">
+                <img src="images/alone.jpg" class="dpics">
                 <p class="dnp">
                     実は、多くの人が「一人で続ける」ことに苦労しています。<br>
                     人間は他者と関わりながら生きる動物であり、1人でいるよりも誰かと共に努力する方が、より大きな力を発揮しやすいからです。
@@ -166,7 +166,7 @@
 
             <section>
                 <h2 class="dh2">約30日後、君は自分を<strong>本気で信じられる</strong>ようになっています。</h2>
-                <img src="placeholder-after-program.jpg" alt="自信に満ちた笑顔で勉強している受験生、積み上がった問題集、桜など合格を連想させるイメージ" class="dpics">
+                <img src="images/confidence.jpg" class="dpics">
                 <p class="dnp">
                     プログラムを終えた後、君の勉強習慣は劇的に変わっています。
                 </p>
