--- a/destinations.html
+++ b/destinations.html
@@ -58,7 +58,7 @@
 <div id="container">
     <div id="contents" class="bg1">
         <main>
-		<img src="images/keyv_p1.png" id ="link1">
+<!-- 　　　？？？？	<img src="images/keyv_p1.png" id ="link1"> -->
             <section>
                 <h2 class="dh2">頑張りたいのに、勉強が続かない君へ</h2>
                 <img src="images/tudukanai.jpg" class="dpics">
