--- a/index.html
+++ b/index.html
@@ -165,22 +165,22 @@
 
 </section>
 
-<section class="bg3 blur">
+<!-- <section class="bg3 blur"> -->
 
-<h2><span class="kazari3-wrap">お知らせ</h2>
+<!-- <h2><span class="kazari3-wrap">お知らせ</h2> -->
 
-<dl class="new">
-<dt>2024/07/16<span>アイコン</span></dt>
-<dd>観光案内サイト・旅行会社向け 無料ホームページテンプレート tp_travel1公開。</dd>
-<dt>20XX/00/00<span>アイコン</span></dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00<span class="icon-bg2">アイコン</span></dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00<span class="icon-bg1">アイコン</span></dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-<dt>20XX/00/00<span class="icon-bg1">アイコン</span></dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
-</dl>
+<!-- <dl class="new"> -->
+<!-- <dt>2024/07/16<span>アイコン</span></dt> -->
+<!-- <dd>観光案内サイト・旅行会社向け 無料ホームページテンプレート tp_travel1公開。</dd> -->
+<!-- <dt>20XX/00/00<span>アイコン</span></dt> -->
+<!-- <dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd> -->
+<!-- <dt>20XX/00/00<span class="icon-bg2">アイコン</span></dt> -->
+<!-- <dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd> -->
+<!-- <dt>20XX/00/00<span class="icon-bg1">アイコン</span></dt> -->
+<!-- <dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd> -->
+<!-- <dt>20XX/00/00<span class="icon-bg1">アイコン</span></dt> -->
+<!-- <dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd> -->
+<!-- </dl> -->
 
 
 
@@ -239,7 +239,6 @@
 
 <footer>
 <small>&copy; <a href="index.html">Tomoking</a> All Rights Reserved.</small>
-<span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
 
 <!--ページの上部へ戻るボタン-->
