--- a/destinations.html
+++ b/destinations.html
@@ -10,50 +10,50 @@
 </head>
 
 <body>
-<header>
-    <div id="header-top">
-        <h1>いつも動画を見てくれてありがとう！</h1>
-    </div>
+<!-- <header> -->
+<!--     <div id="header-top"> -->
+<!--         <h1>いつも動画を見てくれてありがとう！</h1> -->
+<!--     </div> -->
 
-    <div class="header-inner">
-<p id="logo"><a href="index.html"><img src="images/logo_home.png" alt="Travel Logo"></a></p> 
+<!--     <div class="header-inner"> -->
+<!-- <p id="logo"><a href="index.html"><img src="images/logo_home.png" alt="Travel Logo"></a></p>  -->
 
-        <div id="menubar">
-            <nav>
-                <ul>
-                    <li><a href="index.html">ホーム<span>Home</span></a></li>
-                    <li><a href="destinations.html">コース一覧</a>
-                        <ul>
-                            <li><a href="destinations.html#link1">勉強習慣獲得プログラム</a></li>
-                            <li><a href="destinations.html#link2">準備中</a></li>
-                            <li><a href="destinations.html#link3">準備中</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="activities.html">特徴</a>
-                        <ul>
-                            <li><a href="activities_item.html">完全マンツーマン指導</a></li>
-                            <li><a href="activities_item.html">毎日の進捗管理</a></li>
-                            <li><a href="activities_item.html">オーダーメイドの勉強計画</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="events.html">ともきんぐ</a></li>
-                    <li><a href="faq.html">よくある質問</a></li>
-                </ul>
-            </nav>
-        </div>
-        </div>
-</header>
+<!--         <div id="menubar"> -->
+<!--             <nav> -->
+<!--                 <ul> -->
+<!--                     <li><a href="index.html">ホーム<span>Home</span></a></li> -->
+<!--                     <li><a href="destinations.html">コース一覧</a> -->
+<!--                         <ul> -->
+<!--                             <li><a href="destinations.html#link1">勉強習慣獲得プログラム</a></li> -->
+<!--                             <li><a href="destinations.html#link2">準備中</a></li> -->
+<!--                             <li><a href="destinations.html#link3">準備中</a></li> -->
+<!--                         </ul> -->
+<!--                     </li> -->
+<!--                     <li><a href="activities.html">特徴</a> -->
+<!--                         <ul> -->
+<!--                             <li><a href="activities_item.html">完全マンツーマン指導</a></li> -->
+<!--                             <li><a href="activities_item.html">毎日の進捗管理</a></li> -->
+<!--                             <li><a href="activities_item.html">オーダーメイドの勉強計画</a></li> -->
+<!--                         </ul> -->
+<!--                     </li> -->
+<!--                     <li><a href="events.html">ともきんぐ</a></li> -->
+<!--                     <li><a href="faq.html">よくある質問</a></li> -->
+<!--                 </ul> -->
+<!--             </nav> -->
+<!--         </div> -->
+<!--         </div> -->
+<!-- </header> -->
 	
-<aside id="mainimg">
-    <div class="slide slide1">
-        <div>
-            <h2>君だけの地図で、合格へ<span>ともきんぐのオンライン受験サポート</span></h2>
-            <p>毎日続けられる勉強法で、<br>確実な合格へ導くマンツーマン指導</p>
-        </div>
-        <video src="images/1.mp4" autoplay loop muted playsinline></video>
-    </div>
-    <div id="loading-text">loading...</div>
-</aside>
+<!-- <aside id="mainimg"> -->
+<!--     <div class="slide slide1"> -->
+<!--         <div> -->
+<!--             <h2>君だけの地図で、合格へ<span>ともきんぐのオンライン受験サポート</span></h2> -->
+<!--             <p>毎日続けられる勉強法で、<br>確実な合格へ導くマンツーマン指導</p> -->
+<!--         </div> -->
+<!--         <video src="images/1.mp4" autoplay loop muted playsinline></video> -->
+<!--     </div> -->
+<!--     <div id="loading-text">loading...</div> -->
+<!-- </aside> -->
 
 <div id="container">
     <div id="contents" class="bg1">
