--- a/destinations.html
+++ b/destinations.html
@@ -28,6 +28,13 @@
     <div id="contents" class="bg1">
         <main>
 <!-- 　　　？？？？	<img src="images/keyv_p1.png" id ="link1"> -->
+		 <section class="main-visual-section">
+                <h1 class="main-catch-phrase">「明日から…」を終わらせよう。</h1>
+                <h2 class="sub-catch-phrase">机に向かえない君を【自動で動かす】30日習慣スイッチ</h2>
+                <p class="impact-statement">偏差値42→難関私立大合格。</p>
+                <p class="tagline">三日坊主だったともきんぐが証明する、「頑張らずに勉強が続く」仕組み。</p>
+            </section>
+
             <section>
                 <h2 class="dh2">頑張りたいのに、勉強が続かない君へ</h2>
                 <img src="images/tudukanai.jpg" class="dpics">
