--- a/destinations.html
+++ b/destinations.html
@@ -17,7 +17,7 @@
 <aside id="mainimg">
     <div class="slide slide1">
         <div>
-            <h2>逆転合格への第一歩<span>机に向かえない君を【自動で動かす】</span><span>30日間の超習慣化プログラム</span></h2>
+            <h2>逆転合格への第一歩</h2>
         </div>
         <video src="images/1.mp4" autoplay loop muted playsinline></video>
     </div>
@@ -30,9 +30,9 @@
 <!-- 　　　？？？？	<img src="images/keyv_p1.png" id ="link1"> -->
 		 <section class="main-visual-section">
                 <h1 class="main-catch-phrase">「明日から…」を終わらせよう。</h1>
-                <h2 class="sub-catch-phrase">机に向かえない君を【自動で動かす】30日習慣スイッチ</h2>
+                <h2 class="sub-catch-phrase">机に向かえない君を【自動で動かす】<br>30日間の超習慣化プログラム</h2>
                 <p class="impact-statement">偏差値42→難関私立大合格。</p>
-                <p class="tagline">三日坊主だったともきんぐが証明する、「頑張らずに勉強が続く」仕組み。</p>
+                <p class="tagline">三日坊主だったともきんぐが証明する<br>「頑張らずに勉強が続く」仕組み。</p>
             </section>
 
             <section>
@@ -171,7 +171,7 @@
                     <dd>約30日間</dd>
 
                     <dt class="dsdt">提供形式：</dt>
-                    <dd>オンライン（LINE公式アカウント、限定コミュニティなど）</dd>
+                    <dd>オンライン（LINE公式アカウントによるコーチング）</dd>
 
                     <dt class="price-note">価格：</dt>
                     <dd class="price-note"><strong>¥3,000</strong> （追加費用なし）</dd>
