--- a/destinations.html
+++ b/destinations.html
@@ -18,6 +18,8 @@
     <div class="slide slide1">
         <div>
             <h2>逆転合格への第一歩</h2>
+		<h3>ともきんぐ式</h3>
+	　　　<h2>勉強習慣獲得30日プログラム</h2>
         </div>
         <video src="images/1.mp4" autoplay loop muted playsinline></video>
     </div>
@@ -151,8 +153,8 @@
                 </p>
                 <ul>
                     <li class="dsli">勉強するまでの「めんどくさい」時間が激減。</li>
-                    <li class="dsli">計画通りに進められる日が増え、<strong>自分自身に確かな自信</strong>が生まれます。</li>
-                    <li class="dsli">受験本番に向けて、「やれるだけのことはやれた」という強い手応えを感じられます。</li>
+                    <li class="dsli">計画通りに進められることが、<strong>自分への確かな自信</strong>に。</li>
+                    <li class="dsli">毎日、確実に合格へと進む力が身につきます。</li>
                     <li class="dsli">もう、一人で抱え込み、悩む必要はありません。</li>
                 </ul>
                 <p class="dnp">
@@ -168,7 +170,7 @@
                     <dd></dd>
 
                     <dt class="dsdt">実施期間：</dt>
-                    <dd>約30日間</dd>
+                    <dd>30日間</dd>
 
                     <dt class="dsdt">提供形式：</dt>
                     <dd>オンライン（LINE公式アカウントによるコーチング）</dd>
@@ -179,10 +181,10 @@
                     <dt>含まれるもの：</dt>
                     <dd>
                         <ul>
-                            <li class="dsli">約30日間の毎日ミッション配信</li>
+                            <li class="dsli">30日間の毎日ミッション配信</li>
                             <li class="dsli">LINEでの日次進捗確認＆個別アドバイス</li>
                             <li class="dsli">プログラム期間中の学習相談（LINEにて）</li>
-                            <li class="dsli">受験生限定オンラインコミュニティ参加権</li>
+                            <li class="dsli">週に１度のプログラム限定動画配信</li>
                         </ul>
                     </dd>
                 </dl>
