--- a/destinations.html
+++ b/destinations.html
@@ -17,9 +17,7 @@
 <aside id="mainimg">
     <div class="slide slide1">
         <div>
-            <h2>逆転合格への第一歩</h2>
-		<h3>ともきんぐ式</h3>
-	　　　<h2>勉強習慣獲得30日プログラム</h2>
+            <h2>逆転合格への第一歩<br><span>ともきんぐ式</span><br>勉強習慣獲得30日プログラム</h2>
         </div>
         <video src="images/1.mp4" autoplay loop muted playsinline></video>
     </div>
