--- a/destinations.html
+++ b/destinations.html
@@ -166,26 +166,25 @@
                 <dl>
                     <dt class="dsdt">ともきんぐ式 勉強習慣獲得プログラム</dt>
                     <dd></dd>
-
+                      <br>
                     <dt class="dsdt">実施期間：</dt>
                     <dd>30日間</dd>
-
+                       <br>
                     <dt class="dsdt">提供形式：</dt>
                     <dd>オンライン（LINE公式アカウントによるコーチング）</dd>
-
+　　　　　　　　　　　　　<br>
                     <dt class="price-note">価格：</dt>
                     <dd class="price-note"><strong>¥3,000</strong> （追加費用なし）</dd>
-
-                    <dt>含まれるもの：</dt>
-                    <dd>
+			
+		     <br>
+			
+                     <p>プログラム内容</p>
                         <ul>
                             <li class="dsli">30日間の毎日ミッション配信</li>
                             <li class="dsli">LINEでの日次進捗確認＆個別アドバイス</li>
                             <li class="dsli">プログラム期間中の学習相談（LINEにて）</li>
                             <li class="dsli">週に１度のプログラム限定動画配信</li>
                         </ul>
-                    </dd>
-                </dl>
                 <p>※ 本プログラムは習慣化に焦点を当てており、特定の科目の個別指導は含みません。</p>
             </section>
 
