--- a/destinations.html
+++ b/destinations.html
@@ -23,7 +23,7 @@
     </div>
     <div id="loading-text">loading...</div>
 </aside>
-
+</header>
 <div id="container">
     <div id="contents" class="bg1">
         <main>
