--- a/destinations.html
+++ b/destinations.html
@@ -36,7 +36,8 @@
             </section>
 
             <section>
-                <h2 class="dh2">頑張りたいのに、勉強が続かない君へ</h2>
+                <h2 class="dh2">”机に向かえない”今の自分のままで、<br>
+			受かる未来は見えますか？</h2>
                 <img src="images/tudukanai.jpg" class="dpics">
                 <p class="dnp">
                     何度「明日こそは」と決意しても、結局三日坊主…<br>
@@ -44,11 +45,16 @@
                     周りは頑張ってるのに、自分だけ前に進んでいない感じがする…
                 </p>
                 <p class="dnp">
-                    受験生なのに、思うように勉強できない。<br>
+                   「勉強しなきゃ」<br>
+			そう思うほど、スマホを触る手が止まらない。<br>
                 </p>
                 <p class="dnp">
-                    そのもどかしい気持ち、痛いほどよく分かります。
+                    その最悪なフィーリング。<br>出口のないトンネルのような日々。 <br>痛いほどよく分かります。
                 </p>
+		    <br>
+		 <h2 class="dh2">なぜなら、<br>
+			受験生時代のともきんぐ自身がそうだったから。</h2>
+			 
             </section>
 
             <section>
