--- a/destinations.html
+++ b/destinations.html
@@ -45,16 +45,25 @@
                     周りは頑張ってるのに、自分だけ前に進んでいない感じがする…
                 </p>
                 <p class="dnp">
-                   「勉強しなきゃ」<br>
-			そう思うほど、スマホを触る手が止まらない。<br>
+                   「勉強しなきゃ」<br>そう思うほど、スマホを触る手が止まらない。<br>
                 </p>
                 <p class="dnp">
-                    その最悪なフィーリング。<br>出口のないトンネルのような日々。 <br>痛いほどよく分かります。
+                    その最悪なフィーリング。出口のないトンネルのような日々。 <br>痛いほどよく分かります。
                 </p>
 		    <br>
-		 <h2 class="dh2">なぜなら、<br>
-			受験生時代のともきんぐ自身がそうだったから。</h2>
-			 
+		 <h2 class="dh2">なぜなら、ともきんぐ自身がそうだったから。</h2>
+		 <p class="dnp">
+		高校３年の夏時点で、ともきんぐの校内偏差値は42。まさに「やばい」状態でした。
+                     <br>
+			 「青学に行きたい…」
+			 <br>
+			 目標だけはデカいのに、毎日１時間すら机に向かえませんでした。
+			 <br>
+			 何度も「明日こそは」と誓っては、三日坊主を繰り返す。気づけばスマホで時間が溶けていく。
+                </p>
+		     <p class="dnp">
+                   そんなともきんぐが、半年後には<strong>英語偏差値20UP、E判定から青学に合格</strong>できました。<br>
+                </p>
             </section>
 
             <section>
