--- a/destinations.html
+++ b/destinations.html
@@ -62,12 +62,29 @@
 			 何度も「明日こそは」と誓っては、三日坊主を繰り返す。気づけばスマホで時間が溶けていく。
                 </p>
 		     <p class="dnp">
-                   そんなともきんぐが、半年後には<strong>英語偏差値20UP、E判定から青学に合格</strong>できました。<br>
+                   そんなともきんぐが、半年後には英語の偏差値を<strong>20</strong>以上UPさせ、<strong>E判定</strong>から<strong>青学</strong>に<strong>合格</strong>しました。<br>
                 </p>
             </section>
 
             <section>
+		<img src="images/alone.jpg" class="dpics">
                 <h2 class="dh2">でもそれは、<strong>君だけの問題</strong>じゃない。</h2>
+                <img src="images/alone.jpg" class="dpics">
+                <p class="dnp">
+                    実は、多くの人が「一人で続ける」ことに苦労しています。<br>
+                    人間は他者と関わりながら生きる動物であり、1人でいるよりも誰かと共に努力する方が、より大きな力を発揮しやすいからです。
+                </p>
+                <p class="dnp">
+                    一人きりだと誘惑に弱くなり、サボっても誰にもバレない安心感から楽な方に流されてしまうのは、ごく自然なことです。
+                </p>
+                <p class="dnp">
+                    君に必要なのは、根性ややる気ではなく、<strong>「毎日やれる仕組み」</strong>と、<strong>「君を一人にしない伴走者」</strong>。
+                </p>
+            </section>
+
+	　　 <section>
+		<img src="images/alone.jpg" class="dpics">
+                <h2 class="dh2">勉強を継続できないのは、<strong>『君が弱いから』じゃない</strong>。</h2>
                 <img src="images/alone.jpg" class="dpics">
                 <p class="dnp">
                     実は、多くの人が「一人で続ける」ことに苦労しています。<br>
