--- a/destinations.html
+++ b/destinations.html
@@ -62,35 +62,18 @@
 			 何度も「明日こそは」と誓っては、三日坊主を繰り返す。気づけばスマホで時間が溶けていく。
                 </p>
 		     <p class="dnp">
-                   そんなともきんぐが、半年後には英語の偏差値を<strong>20</strong>以上UPさせ、<strong>E判定</strong>から<strong>青学</strong>に<strong>合格</strong>しました。<br>
+                   そんなともきんぐが、半年後には<strong>偏差値20UP</strong>、<strong>E判定</strong>から<strong>青学</strong>に<strong>合格</strong>しました。<br>
                 </p>
             </section>
 
             <section>
 		<img src="images/alone.jpg" class="dpics">
-                <h2 class="dh2">でもそれは、<strong>君だけの問題</strong>じゃない。</h2>
-                <img src="images/alone.jpg" class="dpics">
-                <p class="dnp">
-                    実は、多くの人が「一人で続ける」ことに苦労しています。<br>
-                    人間は他者と関わりながら生きる動物であり、1人でいるよりも誰かと共に努力する方が、より大きな力を発揮しやすいからです。
-                </p>
-                <p class="dnp">
-                    一人きりだと誘惑に弱くなり、サボっても誰にもバレない安心感から楽な方に流されてしまうのは、ごく自然なことです。
-                </p>
-                <p class="dnp">
-                    君に必要なのは、根性ややる気ではなく、<strong>「毎日やれる仕組み」</strong>と、<strong>「君を一人にしない伴走者」</strong>。
-                </p>
-            </section>
-
-	　　 <section>
+                <h2 class="dh2">原因は「やる気」ではなく、君の「脳」の使い方にある。</h2>
 		<img src="images/alone.jpg" class="dpics">
                 <h2 class="dh2">勉強を継続できないのは、<strong>『君が弱いから』じゃない</strong>。</h2>
-                <img src="images/alone.jpg" class="dpics">
                 <p class="dnp">
                     実は、多くの人が「一人で続ける」ことに苦労しています。<br>
-                    人間は他者と関わりながら生きる動物であり、1人でいるよりも誰かと共に努力する方が、より大きな力を発揮しやすいからです。
-                </p>
-                <p class="dnp">
+                    人間は本能的に楽をしたい生き物。
                     一人きりだと誘惑に弱くなり、サボっても誰にもバレない安心感から楽な方に流されてしまうのは、ごく自然なことです。
                 </p>
                 <p class="dnp">
@@ -152,34 +135,32 @@
             </section>
 
             <section>
-                <h2 class="dh2">「一人じゃない」から頑張れる。受験生限定コミュニティ</h2>
+                <h2 class="dh2">「理解を深め、継続を加速させる」週一の限定動画配信</h2>
                 <img src="placeholder-community.jpg" alt="オンラインで複数の学生が笑顔で繋がっているイメージ、またはチャット画面のイメージ" class="dpics">
                 <p class="dnp">
                     君はもう、一人で悩んだり、孤独を感じる必要はありません。
                 </p>
                 <p class="dnp">
-                    参加者限定の<strong>オンラインコミュニティ</strong>にご招待します。<br>
-                    同じように「一人じゃ続かない」悩みを抱え、克服しようと頑張る<strong>全国の受験生</strong>が集まっています。
+                   君の習慣化をさらに加速させ、モチベーションを維持するための<strong>特別な動画</strong>を週に一度、ともきんぐが直接お届けします。
                 </p>
                 <ul>
-                    <li class="dsli">お互いの進捗を共有し、励まし合えます。</li>
-                    <li class="dsli">悩みを打ち明けたり、乗り越え方を相談したりできます。</li>
-                    <li class="dsli">他のメンバーの頑張りが、君のモチベーションになります。</li>
-                    <li class="dsli">「自分だけじゃないんだ」という安心感が得られます。</li>
+                    <li class="dsli">習慣化の原理や脳科学に基づいた、より深いノウハウ</li>
+                    <li class="dsli">モチベーション維持の秘訣、受験期のメンタル管理術</li>
+                    <li class="dsli">受験生の悩みに寄り添った限定コンテンツ。</li>
                 </ul>
                 <p class="dnp">
-                    仲間がいるから、つらい時期も乗り越えられます。
+                  ともきんぐからの直接的なメッセージが、あなたの継続力を力強く後押しします。
                 </p>
             </section>
 
             <section>
-                <h2 class="dh2">約30日後、君は自分を<strong>本気で信じられる</strong>ようになっています。</h2>
+                <h2 class="dh2">30日後、<strong>自動的に机に向かう君</strong>へと<strong>進化</strong>します。</h2>
                 <img src="images/confidence.jpg" class="dpics">
                 <p class="dnp">
                     プログラムを終えた後、君の勉強習慣は劇的に変わっています。
                 </p>
                 <p class="dnp">
-                    毎日4時間（またはそれ以上）集中して勉強するのが<strong>「当たり前」</strong>になり、勉強への心理的なハードルが驚くほど下がります。
+                    毎日3時間（またはそれ以上）集中して勉強するのが「頑張ること」ではなく、<strong>「まるで呼吸をするかのように当たり前」</strong>になり、勉強への心理的なハードルが驚くほど下がります。
                 </p>
                 <ul>
                     <li class="dsli">勉強するまでの「めんどくさい」時間が激減。</li>
