--- a/destinations.html
+++ b/destinations.html
@@ -168,6 +168,8 @@
                     <li class="dsli">毎日、確実に合格へと進む力が身につきます。</li>
                     <li class="dsli">もう、一人で抱え込み、悩む必要はありません。</li>
                 </ul>
+		    <p class="dnp">
+			    受験本番、「やれるだけのことは全てやった」と胸を張って言える。<br>その未来を、今、手に入れませんか？  </p>
                 <p class="dnp">
                     「やればできる」という成功体験は、勉強だけでなく、これからの人生の大きな力になります。
                 </p>
@@ -205,15 +207,16 @@
             </section>
 
             <section>
-                <h2 class="dh2">さあ、君も「変わる一歩」を踏み出そう。</h2>
+                <h2 class="dh2">さあ、君の「明日から…」を、今日で終わりにしよう。</h2>
                 <img src="placeholder-cta-arrow.png" alt="力強い矢印や、目標に向かって走り出す人のイメージ">
                 <p class="dnp">
                     一人で悩む日々は、今日で終わりです。<br>
-                   ともきんぐと、同じ目標を持つ仲間が、君の習慣獲得を徹底サポートします。
+                   あなたの本気、ともきんぐが受け止めます。 
                 </p>
                 <p class="dnp">
-                 全てのミッションをクリアして「毎日コツコツ頑張れる自分」を手に入れ、自信を持って受験に臨む未来を掴み取りましょう。
+                 全てのミッションをクリアして「毎日コツコツ頑張れる自分」を手に入れ、自信を持って受験に臨む未来を掴もう。
                 </p>
+		<h2 class="dh2">逆転合格への第一歩を、ともきんぐと踏み出そう。</h2>
                 <a href="[決済サービスのURLをここに設定]" class="cta-button">
                     本プログラムに参加する (¥3,000)
                 </a>
@@ -263,7 +266,7 @@
 
 <footer>
     <small>© <a href="index.html">Tomoking</a> All Rights Reserved.</small>
-    <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
+
 </footer>
 
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
