--- a/destinations.html
+++ b/destinations.html
@@ -38,7 +38,7 @@
             <section>
                 <h2 class="dh2">”机に向かえない”今の自分のままで、<br>
 			受かる未来は見えますか？</h2>
-                <img src="images/tudukanai.jpg" class="dpics">
+                <img src="images/lpbed.png" class="dpics">
                 <p class="dnp">
                     何度「明日こそは」と決意しても、結局三日坊主…<br>
                     やろうと思っても、何から始めていいか分からず時間だけが過ぎていく…<br>
@@ -69,7 +69,7 @@
             <section>
 		<img src="images/alone.jpg" class="dpics">
                 <h2 class="dh2">原因は「やる気」ではなく、君の「脳」の使い方にある。</h2>
-		<img src="images/alone.jpg" class="dpics">
+		<img src="images/lpchain.jpg" class="dpics">
                 <h2 class="dh2">勉強を継続できないのは、<strong>『君が弱いから』じゃない</strong>。</h2>
                 <p class="dnp">
                     実は、多くの人が「一人で続ける」ことに苦労しています。<br>
@@ -208,7 +208,7 @@
 
             <section>
                 <h2 class="dh2">さあ、君の「明日から…」を、今日で終わりにしよう。</h2>
-                <img src="placeholder-cta-arrow.png" alt="力強い矢印や、目標に向かって走り出す人のイメージ">
+                <img src="lplast.png" alt="力強い矢印や、目標に向かって走り出す人のイメージ">
                 <p class="dnp">
                     一人で悩む日々は、今日で終わりです。<br>
                    あなたの本気、ともきんぐが受け止めます。 
