--- a/destinations.html
+++ b/destinations.html
@@ -17,7 +17,9 @@
 <aside id="mainimg">
     <div class="slide slide1">
         <div>
-            <h1>逆転合格への第一歩<br><h2>ともきんぐ式</h2>勉強習慣獲得30日プログラム</h1>
+            <h1　class="main-catch-phrase">逆転合格への第一歩</h1>
+		<h2>ともきんぐ式</h2>
+            <h1　class="main-catch-phrase">勉強習慣獲得30日プログラム</h1>
         </div>
         <video src="images/1.mp4" autoplay loop muted playsinline></video>
     </div>
@@ -59,7 +61,7 @@
 			 <br>
 			 目標だけはデカいのに、毎日１時間すら机に向かえませんでした。
 			 <br>
-			 何度も「明日こそは」と誓っては、三日坊主を繰り返す。気づけばスマホで時間が溶けていく。
+			 何度も「明日こそは」と誓っては、三日坊主を繰り返す。<br>気づけばスマホで時間が溶けていく。
                 </p>
 		     <p class="dnp">
                    そんなともきんぐが、半年後には<strong>偏差値20UP</strong>、<strong>E判定</strong>から<strong>青学</strong>に<strong>合格</strong>しました。<br>
@@ -67,12 +69,11 @@
             </section>
 
             <section>
-		<img src="images/alone.jpg" class="dpics">
-                <h2 class="dh2">原因は「やる気」ではなく、君の「脳」の使い方にある。</h2>
+		
 		<img src="images/lpchain.jpg" class="dpics">
                 <h2 class="dh2">勉強を継続できないのは、<strong>『君が弱いから』じゃない</strong>。</h2>
                 <p class="dnp">
-                    実は、多くの人が「一人で続ける」ことに苦労しています。<br>
+                    実は、多くの受験生が「一人で勉強を続ける」ことに苦労しています。<br>
                     人間は本能的に楽をしたい生き物。
                     一人きりだと誘惑に弱くなり、サボっても誰にもバレない安心感から楽な方に流されてしまうのは、ごく自然なことです。
                 </p>
@@ -82,14 +83,14 @@
             </section>
 
             <section>
-                <h2 class="dh2">もう、「一人で悩む時間」は終わりにしよう。</h2>
+                <h2 class="dh2">もう、一人で悩む時間は終わりにしよう。</h2>
                 <h2 class="dh2"><strong>「ともきんぐ式 勉強習慣獲得プログラム」</strong>が、君を変えます。</h2>
                 <img src="placeholder-support-network.jpg" alt="ともきんぐ、学生、LINE、コミュニティが繋がったサポート網のイメージ" class="dpics">
                 <p class="dnp">
-                    君の「一人で続かない悩み」を根本から解決し、<strong>受験勉強を乗り切るための揺るぎない「勉強習慣」を身につける</strong>ためのプログラムを作成しました。
+                    君の「一人では勉強が続かない悩み」を根本から解決し、<strong>受験を乗り切るための揺るぎない「勉強習慣」</strong>を身につけるためのプログラムを作成しました。
                 </p>
                 <p class="dnp">
-                    「一人じゃ続かない」君が、無理なく、着実に、<strong>「毎日コツコツ頑張れる自分」に変わる</strong>ための、科学に基づいた<strong>「仕組み」</strong>「仕組み」と、君の<strong>「伴走者」」</strong>がここにいます。
+                    「一人じゃ勉強が続かない」君が、無理なく、着実に、<strong>「毎日コツコツ頑張れる自分」</strong>に変わるための、科学に基づいた<strong>「仕組み」</strong>と、君の<strong>「伴走者」</strong>がここにいます。
                 </p>
             </section>
 
@@ -100,7 +101,7 @@
                     「今日、何をすればいいんだろう？」と考える無駄な労力や時間を消し去ります。
                 </p>
                 <p class="dnp">
-                    このプログラムでは、心理学に基づいたスモールステップで、「今日の君は、これだけやればOK」という具体的な学習ミッションが毎日君のLINEに届きます。
+                    このプログラムでは、30日間、心理学に基づいたスモールステップで、「今日の君は、これだけやればOK」という具体的な学習ミッションが<strong>毎日</strong>君のLINEに届きます。
                 </p>
                 <ul>
                     <li class="dsli">毎日「これだけ！」が明確に。迷わずすぐに取りかかれます。</li>
@@ -108,7 +109,7 @@
                     <li class="dsli">習慣化の土台が自然に作られます。</li>
                 </ul>
                 <p class="dnp">
-                    さらに、ミッションをクリアしたかどうかを毎日LINEでご報告いただきます。この<strong>「報告する」という外部からの目が、一人だとついついサボってしまう君に、適度なプレッシャーと「やらなきゃ！」という良い強制力</strong>を生み出します。
+                    さらに、ミッションをクリアしたかどうかを毎日LINEでご報告いただきます。この「報告する」という外部からの目が、一人だとついついサボってしまう君に、適度なプレッシャーと「やらなきゃ！」という良い強制力を生み出します。
                 </p>
             </section>
 
@@ -125,7 +126,7 @@
                     「なぜ今日は難しかったのか？」「次回は時間やタイミングを変えてみようか？」「この教材の方が取り組みやすいかも？」など、<strong>君の状況に合わせて、原因を一緒に考え、具体的な改善策をLINEで丁寧にアドバイス</strong>します。
                 </p>
                 <ul>
-                    <li class="dsli">君の「挫折ポイント」を一緒に見つけ、乗り越えるために尽力します。</li>
+                    <li class="dsli">君の挫折ポイントを一緒に見つけ、乗り越えるために尽力します。</li>
                     <li class="dsli">”いつでも相談できる相手がいる”という安心感。</li>
                     <li class="dsli">「見守られている」意識が、継続する力になります。</li>
                 </ul>
@@ -137,9 +138,6 @@
             <section>
                 <h2 class="dh2">「理解を深め、継続を加速させる」週一の限定動画配信</h2>
                 <img src="placeholder-community.jpg" alt="オンラインで複数の学生が笑顔で繋がっているイメージ、またはチャット画面のイメージ" class="dpics">
-                <p class="dnp">
-                    君はもう、一人で悩んだり、孤独を感じる必要はありません。
-                </p>
                 <p class="dnp">
                    君の習慣化をさらに加速させ、モチベーションを維持するための<strong>特別な動画</strong>を週に一度、ともきんぐが直接お届けします。
                 </p>
@@ -207,16 +205,16 @@
             </section>
 
             <section>
-                <h2 class="dh2">さあ、君の「明日から…」を、今日で終わりにしよう。</h2>
+                <h2 class="dh2">さあ、君の「明日から」を、今度こそ実現させよう</h2>
                 <img src="lplast.png" alt="力強い矢印や、目標に向かって走り出す人のイメージ">
                 <p class="dnp">
                     一人で悩む日々は、今日で終わりです。<br>
                    あなたの本気、ともきんぐが受け止めます。 
                 </p>
                 <p class="dnp">
-                 全てのミッションをクリアして「毎日コツコツ頑張れる自分」を手に入れ、自信を持って受験に臨む未来を掴もう。
+                 全てのミッションをクリアして<strong>「毎日コツコツ頑張れる自分」</strong>。を手に入れ、<strong>自信を持って受験に臨む未来を掴もう</strong>。
                 </p>
-		<h2 class="dh2">逆転合格への第一歩を、ともきんぐと踏み出そう。</h2>
+		<h1 class="dh2">逆転合格への第一歩を、今日、ともきんぐと踏み出そう。</h2>
                 <a href="[決済サービスのURLをここに設定]" class="cta-button">
                     本プログラムに参加する (¥3,000)
                 </a>
