--- a/destinations.html
+++ b/destinations.html
@@ -17,9 +17,9 @@
 <aside id="mainimg">
     <div class="slide slide1">
         <div>
-            <h1　class="main-catch-phrase">逆転合格への第一歩</h1>
+            <h2>逆転合格への第一歩</h2>
 		<h2>ともきんぐ式</h2>
-            <h1　class="main-catch-phrase">勉強習慣獲得30日プログラム</h1>
+            <h2>勉強習慣獲得30日プログラム</h2>
         </div>
         <video src="images/1.mp4" autoplay loop muted playsinline></video>
     </div>
@@ -70,7 +70,7 @@
 
             <section>
 		
-		<img src="images/lpchain.jpg" class="dpics">
+		<img src="images/lpchain.png" class="dpics">
                 <h2 class="dh2">勉強を継続できないのは、<strong>『君が弱いから』じゃない</strong>。</h2>
                 <p class="dnp">
                     実は、多くの受験生が「一人で勉強を続ける」ことに苦労しています。<br>
@@ -206,13 +206,13 @@
 
             <section>
                 <h2 class="dh2">さあ、君の「明日から」を、今度こそ実現させよう</h2>
-                <img src="lplast.png" alt="力強い矢印や、目標に向かって走り出す人のイメージ">
+                <img src="images/lplast.png" alt="力強い矢印や、目標に向かって走り出す人のイメージ">
                 <p class="dnp">
                     一人で悩む日々は、今日で終わりです。<br>
                    あなたの本気、ともきんぐが受け止めます。 
                 </p>
                 <p class="dnp">
-                 全てのミッションをクリアして<strong>「毎日コツコツ頑張れる自分」</strong>。を手に入れ、<strong>自信を持って受験に臨む未来を掴もう</strong>。
+                 全てのミッションをクリアして<strong>「毎日コツコツ頑張れる自分」</strong>を手に入れ、<strong>自信を持って受験に臨む未来を掴もう</strong>。
                 </p>
 		<h1 class="dh2">逆転合格への第一歩を、今日、ともきんぐと踏み出そう。</h2>
                 <a href="[決済サービスのURLをここに設定]" class="cta-button">
