--- a/destinations.html
+++ b/destinations.html
@@ -13,18 +13,19 @@
     <div id="header-top">
         <h1>いつも動画を見てくれてありがとう！</h1>
     </div>
-	
+ <section class="main-visual-section">	
 <aside id="mainimg">
     <div class="slide slide1">
         <div>
-            <h2>逆転合格への第一歩</h2>
+            <h1 class="main-catch-phrase">逆転合格への第一歩</h1>
 		<h2>ともきんぐ式</h2>
-            <h2>勉強習慣獲得30日プログラム</h2>
+            <h1 class="main-catch-phrase">勉強習慣獲得30日プログラム</h1>
         </div>
         <video src="images/1.mp4" autoplay loop muted playsinline></video>
     </div>
     <div id="loading-text">loading...</div>
 </aside>
+	 </section>
 </header>
 <div id="container">
     <div id="contents" class="bg1">
