--- a/destinations.html
+++ b/destinations.html
@@ -116,7 +116,7 @@
 
             <section>
                 <h2 class="dh2">「挫折させない」ともきんぐの個別LINE伴走サポート</h2>
-                <img src="placeholder-tomoking-line.jpg" alt="[君の名前/ともきんぐ]の温かい雰囲気の写真またはイラストとLINEのやり取り" class="dpics">
+                <img src="images/feture2.jpg" alt="">
                 <p class="dnp">
                     このプログラムの最も大切な要素の一つが、私、ともきんぐによるLINEでの個別サポートです。
                 </p>
