--- a/destinations.html
+++ b/destinations.html
@@ -17,9 +17,9 @@
 <aside id="mainimg">
     <div class="slide slide1">
         <div>
-            <h1 class="main-catch-phrase">逆転合格への第一歩</h1>
-		<h2>ともきんぐ式</h2>
-            <h1 class="main-catch-phrase">勉強習慣獲得30日プログラム</h1>
+            <h2>逆転合格への第一歩</h2>
+		<h3>ともきんぐ式</h3>
+            <h2>勉強習慣獲得30日プログラム</h2>
         </div>
         <video src="images/1.mp4" autoplay loop muted playsinline></video>
     </div>
