--- a/destinations.html
+++ b/destinations.html
@@ -85,7 +85,7 @@
             <section>
                 <h2 class="dh2">もう、一人で悩む時間は終わりにしよう。</h2>
                 <h2 class="dh2"><strong>「ともきんぐ式 勉強習慣獲得プログラム」</strong>が、君を変えます。</h2>
-                <img src="placeholder-support-network.jpg" alt="ともきんぐ、学生、LINE、コミュニティが繋がったサポート網のイメージ" class="dpics">
+                <img src="images/mainvis.png" alt="ともきんぐ、学生、LINE、コミュニティが繋がったサポート網のイメージ" class="dpics">
                 <p class="dnp">
                     君の「一人では勉強が続かない悩み」を根本から解決し、<strong>受験を乗り切るための揺るぎない「勉強習慣」</strong>を身につけるためのプログラムを作成しました。
                 </p>
