--- a/transraw.html
+++ b/transraw.html
@@ -15,7 +15,7 @@
     <p>深水友希</p>
 
     <h2>所在地</h2>
-    <p>神奈川県相模原市緑区橋本7－11－2</p>
+    <p>神奈川県相模原市緑区橋本３−２０−１７</p>
 
     <h2>電話番号</h2>
     <p>070-5548-2439（受付時間：平日9:00〜17:00）</p>
