--- a/destinations.html
+++ b/destinations.html
@@ -215,16 +215,17 @@
                  全てのミッションをクリアして<strong>「毎日コツコツ頑張れる自分」</strong>を手に入れ、<strong>自信を持って受験に臨む未来を掴もう</strong>。
                 </p>
 		<h1 class="dh2">逆転合格への第一歩を、今日、ともきんぐと踏み出そう。</h2>
-                <a href="[決済サービスのURLをここに設定]" class="cta-button">
+                <a href="https://tomoki0715.github.io/tomoking-yourteacher/howtopay.html" class="cta-button">
                     本プログラムに参加する (¥3,000)
                 </a>
                 <div class="payment-icons">
+	            <img src="icon-paypay.png" alt="PayPay">
                     <img src="icon-visa.png" alt="Visa">
                     <img src="icon-mastercard.png" alt="Mastercard">
                     <img src="icon-jcb.png" alt="JCB">
-                    <img src="icon-konbini.png" alt="コンビニ決済">
-                    <img src="icon-paypay.png" alt="PayPay">
-                    <img src="icon-linepay.png" alt="LINE Pay">
+	            <img src="icon-jcb.png" alt="JCB">
+                    
+                   
                 </div>
             </section>
 
