--- a/30daysprogram.html
+++ b/30daysprogram.html
@@ -219,11 +219,11 @@
                     本プログラムに参加する (¥3,000)
                 </a>
                 <div class="payment-icons">
-	            <img src="icon-paypay.png" alt="PayPay">
-                    <img src="icon-visa.png" alt="Visa">
-                    <img src="icon-mastercard.png" alt="Mastercard">
-                    <img src="icon-jcb.png" alt="JCB">
-	            <img src="icon-jcb.png" alt="JCB">
+	            <img src="images/paypay.png" alt="PayPay">
+                    <img src="images/visa.png" alt="Visa">
+                    <img src="images/mascard.png" alt="Mastercard">
+                    <img src="images/jcb.png" alt="JCB">
+	            <img src="images/ameex.png" alt="JCB">
                     
                    
                 </div>
